[project]
name = "ultralight_hiking"
version = "0.1.0"
description = ""
authors = [
    {name = "Moritz Boos", email = "moritz.boos@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23.1",
    "scipy>=1.8.1",
    "praw>=7.6.0",
    "matplotlib>=3.5.2",
    "seaborn>=0.11.2",
    "pandas>=1.4.3",
    "ipykernel>=6.15.1",
    "typer>=0.7.0",
    "psaw>=0.1.0",
    "beautifulsoup4>=4.11.1",
]

[dependency-groups]
dev = [
    "pytest>=5.2",
    "stubs>=1.0.0",
    "joblib>=1.1.0",
    "mypy>=0.991",
    "black>=22.12.0",
]

[project.scripts]
ul-scraper = "ultralight_hiking.cmd:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
